Update Layout Shift FIX

--- a/styles/index.css
+++ b/styles/index.css
@@ -3,3 +3,19 @@
     align-self: center;
     width: 50%;
 }
+
+.picture {
+    object-fit: cover;
+    margin-right: 20px;
+    min-width: 10rem;
+    min-height: 10rem;
+    max-width: 10rem;
+    max-height: 10rem;
+}
+
+.picture_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+}
